feat: domain promo (#13)
